# doxy-serve

./: .gitignore  docker-compose.yaml
demo/: CMakeLists.txt  Dockerfile  entrypoint.sh
demo/docs/: Doxyfile.in  header.html.in
demo/src/: demo.cpp  demo.h  demo.hpp  main.cpp
etl/: myproject.py
etl/src/: app.py  file_db.py
nginx/: mime.types  nginx.conf
server/: Dockerfile
tests/: cleanup.py  generate_archives.py  hello.txt  index.html  index.html.template  populate_dox.py  submit.py
www/static/: index.html  sub-0.html  sub-1.html  sub-2.html
